--- a/css/feature-body1-style.css
+++ b/css/feature-body1-style.css
@@ -54,7 +54,7 @@
   margin-right: 17px;
 }
 
-.titles{
+.feature-body1 .titles{
   text-align: left;
   color: var(--font-color);
   width: 78%;
